--- a/zira_clone/.env
+++ b/zira_clone/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/onboarding
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
+
+DATABASE_URL=postgresql://mukulsingh94868:npg_W3xMk5NUGAFP@ep-damp-star-a8iaa0ov-pooler.eastus2.azure.neon.tech/zcrum?sslmode=require
